fix(text-translate): Update visibility handling for translated text in the translation editor

--- a/legal/static/legal/css/translate/text_translate/text_translate.css
+++ b/legal/static/legal/css/translate/text_translate/text_translate.css
@@ -568,6 +568,7 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
   line-height: 1.42;
+  z-index: 10;
 }
 
 .text-translate-editor-translated.hidden {
